add test coverage v2

--- a/.github/workflows/test_and_lint.yml
+++ b/.github/workflows/test_and_lint.yml
@@ -22,7 +22,7 @@ jobs:
           make install
       - name: Run linter and pytest
         run: |
-          make test
+          make tests
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v5.0.0
         if: github.ref_name == 'main'
