--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 pyyaml = "^6.0.1"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
